# 20250818-genai-workshop-draft

./: .gitignore  0-setup.ipynb  1.1-load-data-complete.ipynb  1.2-query-complete.ipynb  2.1-playground-run.ipynb  2.2-wiki-import-complete.ipynb  2.3-wiki-search-run.ipynb  3.1-rag-basic-complete.ipynb  3.1-rag-complete.ipynb  3.2-working-with-long-texts.ipynb  3.3-rag-with-chunking.ipynb  4.1-multimodal-rag.ipynb  4.2-multimodal-rag.ipynb  README.md  create_collection_and_import.py  docker-compose.yml  main.py  pdf_to_img.py  pdf_to_md_w_imgs.py  prep-data.py  pyproject.toml  temp.py  weaviate_examples.py
