[project]
name = "202508-aws-genai-workshop-material"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chonkie[all]>=1.1.2",
    "datasets>=4.0.0",
    "docling>=2.48.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "pymupdf>=1.26.3",
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.1",
    "weaviate-client>=4.16.7",
]
